--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,8 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
 
-:root{
-  /*Colors */
-/*Font Weight*/
-  /*Font-Size*/
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -64,7 +69,7 @@ p {
 }
 
 ol {
-  font-size: var(font-6);
+  font-size: 16px;
   float: left;
   margin: 20px;
   padding: 20px;
@@ -73,10 +78,10 @@ ol {
 ul{
 
   font-weight: 250;
-  font-size: undefined;
+  font-size: 16px;
   line-height: 1.6;
   color: #F5FFFA; 
-  float: center;
+  float: inline-end;
   margin: 20px;
   padding: 20px;
   list-style-type:lower-greek;
@@ -93,7 +98,7 @@ ul{
   font-family: inherit;
   font-weight: inherit;
   float: left;
-  font-size: var(font-6);
+  font-size: 16px;
 }
 
 .button {
@@ -110,6 +115,8 @@ ul{
   border-radius: 4px;
   /* width of the border, type, color */
   border-bottom: 2px solid #04AA6D;
+  -webkit-transition: 0.7s opacity;
+  -o-transition: 0.7s opacity;
   transition: 0.7s opacity;
 }
 
@@ -127,6 +134,8 @@ button {
   border-radius: 4px;
   /* width of the border, type, color */
   border-bottom: 2px solid #04AA6D;
+  -webkit-transition: 0.7s opacity;
+  -o-transition: 0.7s opacity;
   transition: 0.7s opacity;
 }
 
@@ -226,8 +235,8 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  height: 30;
-  width: 200;
+  height: 30px;
+  width: 200px;
 }
 
 /*Different design cause the task was build one with rgba while hovering*/
@@ -331,17 +340,22 @@ tr:nth-child(even) {
 }
 
 .page-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%
-  padding 20px;
 }
 
 .page-header__item {
-  flex: 0 1 200px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -363,8 +377,10 @@ tr:nth-child(even) {
 
 @supports (display: grid) {
  .grid {
+   display: -ms-grid;
    display: grid;
    /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
+   -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 20px;
    margin: 0;
@@ -376,11 +392,25 @@ tr:nth-child(even) {
    margin: 0;
  }
  .grid__item:last-child {
+   -ms-grid-column: 3;
    grid-column: 3 / 3;
+   -ms-grid-row: 1;
+   -ms-grid-row-span: 2;
    grid-row: 1 / 3;
  }
 }
 /*There will be no variables for the following colors, there only used once*/
+@-webkit-keyframes color-change {
+  0% {
+    fill: #edc655; 
+  }
+  50% {
+    fill: #fcffad;
+  }
+  100% {
+    fill: #f76414;
+  }
+}
 @keyframes color-change {
   0% {
     fill: #edc655; 
@@ -394,40 +424,74 @@ tr:nth-child(even) {
 }
 
 .sun {
-  animation: 6s color-change infinite alternate linear;
+  -webkit-animation: 6s color-change infinite alternate linear;
+          animation: 6s color-change infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
+  }
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
 }
 
 @keyframes cloud-move {
   from {
-    transform: translate(0, 50px);
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
   to {
-    transform: translate(200px, 50px);
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
+}
+
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
+  }
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
-    transform: translate(446px, 48px);
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
   to {
-    transform: translate(100px, 48px);
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
-  animation: 34s cloud-move-reverse infinite alternate linear;
+  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 .cloud-front {
-  animation: 20s cloud-move infinite alternate linear;
+  -webkit-animation: 20s cloud-move infinite alternate linear;
+          animation: 20s cloud-move infinite alternate linear;
 }
 
 /*For the footer*/
 .page-footer {
   clear:both;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction:column;
+  -webkit-box-orient:vertical;
+  -webkit-box-direction:normal;
+      -ms-flex-direction:column;
+          flex-direction:column;
   text-align: center;
   /* Fixed at bottom*/
   /*position: fixed;
@@ -443,20 +507,24 @@ tr:nth-child(even) {
 }
 
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 @media all and (max-width: 500px) {
   .grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px){
   .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
