--- a/css/style.production.css
+++ b/css/style.production.css
@@ -359,15 +359,6 @@ tr:nth-child(even) {
   text-align: right;
 }
 
-.navigation-list {
-  list-style-type: none;
-}
-
-.navigation-list li {
-  display: inline-block;
-  margin-left: 15px;
-}
-
 /* start grid fallback */
 .grid__item {
  display: inline-block;
@@ -488,22 +479,16 @@ tr:nth-child(even) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient:vertical;
+  float: inline-start;
+  -webkit-box-orient: vertical;
   -webkit-box-direction:normal;
-      -ms-flex-direction:column;
+      -ms-flex-direction: column;
           flex-direction:column;
   text-align: center;
-  /* Fixed at bottom*/
-  /*position: fixed;
-  bottom: 0;
-  lef: 0;
-  width: 100%;
-  height: 50px;
-  padding: 10px;
-  margin: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;*/
+}
+
+.social-media{
+ 
 }
 
 html {
